--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -15,7 +16,16 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start:development": "env-cmd -e development react-scripts start",
+    "start:testing": "env-cmd -e testing react-scripts start",
+    "start:production": "env-cmd -e production react-scripts start",
+    "build:development": "env-cmd -e development react-scripts build",
+    "build:testing": "env-cmd -e testing react-scripts build",
+    "build:production": "env-cmd -e production react-scripts build",
+    "test:development": "env-cmd -e development react-scripts test",
+    "test:testing": "env-cmd -e testing react-scripts test",
+    "test:production": "env-cmd -e production react-scripts test"
   },
   "eslintConfig": {
     "extends": [
@@ -34,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "env-cmd": "^10.1.0"
   }
 }
